# SACMAX2.0

./: .dockerignore  .env  .env.example  .gitignore  .railway.yaml  .railwayignore  DEPLOYMENT.md  DEPLOY_RAILWAY.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.waha  GOOGLE_SHEETS_SETUP.md  GUIA_TESTE_WHATSAPP.md  INSTALL_DOCKER.md  Procfile  QUICK_START.md  RAILWAY_DEPLOY.md  RAILWAY_SETUP.md  README.md  README_DEPLOY_WAHA.md  README_RAILWAY.md  README_WAHA.md  README_WHATSAPP_CONTROL.md  SISTEMA_CRIADO.md  cache-monitoring.js  check_database.py  complete-diagnostic.js  complete_import.py  connection-test-report.json  debug_tabs.html  deploy-railway-waha.sh  deploy-railway.sh  deploy.sh  diagnostic-report.json  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  final-validation-report.json  final-validation.js  (+54 more)
backend/: .dockerignore  .railwayignore  Dockerfile  Procfile  README_RAILWAY.md  alembic.ini  app.py  create_feedback_table.sql  create_produtividade_table.sql  create_table.py  create_users_table.sql  create_whatsapp_table.sql  database_config.py  database_pool.py  deploy_to_railway.py  env.example  excel_to_database.py  feedback_analyzer.py  main.py  migrate_whatsapp_tables.py  nixpacks.toml  operacoes_vion_complete.sql  process_sql_for_railway.py  pyproject.toml  railway.json  railway.toml  railway_produtividade.sql  railway_produtividade_completo.sql  railway_produtividade_postgres.sql  requirements.txt  server.js  setup.py  start.sh  test_railway_connection.py
backend/app/: __init__.py  app.py  app_backup.py
backend/config/: feedback_schema.sql  feedback_setup.md  server.js  supabase.js  supabase_optimized_schema.sql  supabase_schema.sql  supabase_setup.md
backend/routes/: cache.js  feedback.js  network.js
docker/: start.ps1  (+7 more)
(+761 files in other folders)
